Add the capacity to create the matrix based on two values
Added a new input field to create the matrix based on two values: width and heigth, also changed their configuration to work as dropdowns to avoid wrong data submition.  Added a clean command in the submit button to clear the win-message to reset the table

--- a/tasks/memory-game/group-Row1/src/css/site.css
+++ b/tasks/memory-game/group-Row1/src/css/site.css
@@ -9,12 +9,13 @@ td {
 	font-family: 'Didact Gothic', sans-serif;
     font-size: 300%;
 	border: 2px solid white;
-	width: 15%;
+	width: 100px;
 }
 
 td:hover {
     background-color: #FDF544;
     color: black;
+	width: 100px;
 }
 
 .box{
@@ -51,6 +52,7 @@ input[type=text] {
 	font-family: 'Didact Gothic', sans-serif;
 	font-weight:normal;
 	font-size: 20px;
+	width: 70px;
 }
 .textCommon{
 	font-family: 'Didact Gothic', sans-serif;
@@ -59,3 +61,11 @@ input[type=text] {
 	color:#116611;
 }
 
+.dropbtn {
+    background-color: #D7D6D7;
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
