--- a/tasks/memory-game/group-Row1/src/css/site.css
+++ b/tasks/memory-game/group-Row1/src/css/site.css
@@ -74,3 +74,10 @@ input[type=text] {
 	font-size: 20px;
 	color:#2424A4	;
 }
+
+.title {
+  font-family: 'Didact Gothic', sans-serif;
+    font-size: 300%;
+  border: 2px solid white;
+  width: 100%;
+}
